Color Management View Transforms no longer reflected in the Compositor Backdrop #86219

Closed
opened 2021-03-03 02:03:03 +01:00 by Harley Denham · 15 comments

System Information
Operating system: Windows 10 20H2
Graphics card: Nvidia RTX 2080 Ti

Blender Version
Broken: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab, type: Release
Worked: 2.91.X

Short description of error
Color Management View Transforms / Look settings are not reflected in the compositor backdrop, preventing working visualisation of output.

Exact steps for others to reproduce the error
Render any image.
Display "Render Result" in Image Editor alongside Compositor with the Backdrop enabled.
Apply/change the View Transform + Look in the Color Management panel to see discrepancy.

**System Information** Operating system: Windows 10 20H2 Graphics card: Nvidia RTX 2080 Ti **Blender Version** Broken: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab44, type: Release Worked: 2.91.X **Short description of error** Color Management View Transforms / Look settings are not reflected in the compositor backdrop, preventing working visualisation of output. **Exact steps for others to reproduce the error** Render any image. Display "Render Result" in Image Editor alongside Compositor with the Backdrop enabled. Apply/change the View Transform + Look in the Color Management panel to see discrepancy.
Author

Added subscriber: @qxoko

Added subscriber: @qxoko

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

I cannot confirm that, it works here, both in 2.93 and in 2.92. Can you post a blendfile where it happens?

I cannot confirm that, it works here, both in 2.93 and in 2.92. Can you post a blendfile where it happens?

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author

I've created a brand new file with 2.92.0-release and attached it, with a screenshot to demonstrate as well.

I've backed up and checked several scenes in a commercial project created in 2.90/2.91 and all scenes are affected in 2.92 as well. At least for me, it is not a one-off issue.

T86219_color_bug.png
T86219_color_bug.blend

I've created a brand new file with 2.92.0-release and attached it, with a screenshot to demonstrate as well. I've backed up and checked several scenes in a commercial project created in 2.90/2.91 and all scenes are affected in 2.92 as well. At least for me, it is not a one-off issue. ![T86219_color_bug.png](https://archive.blender.org/developer/F9862740/T86219_color_bug.png) [T86219_color_bug.blend](https://archive.blender.org/developer/F9862737/T86219_color_bug.blend)

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This is interesting. I can indeed reproduce that behavior with your file. However, if you go to a different workspace and create a compositor there, the backdrop reacts to color management just fine. Your compositing workspace seems to be broken somehow, but I have no idea how. Maybe @Jeroen-Bakker has an idea?

This is interesting. I can indeed reproduce that behavior with your file. However, if you go to a different workspace and create a compositor there, the backdrop reacts to color management just fine. Your compositing workspace seems to be broken somehow, but I have no idea how. Maybe @Jeroen-Bakker has an idea?
Author

Huh.

(I actually did attempt it in a reset-to-default copy of 2.92 and it still occurred, but I now realise I was only trying existing files with that workspace inside).

Also It seems for my installation, loading a new Compositor preset from the Add Workspace menu (see screenshot) carries this behaviour for me — it's not just the original Compositor that's open by default, the actual presets embedded in the startup file are "corrupted" too.
If I just go to any other workspace type and manually switch a zone to a Compositor as Sebastian suggests, those display correctly.

I've attached my startup file in case it helps track down the issue. I want to say it was created in 2.81 or 2.82 when I made the leap from 2.7x and has been carried over updates ever since. I do also wonder if a file created fresh in 2.8x and immediately re-opened in 2.92 might exhibit this behaviour?

image.png

T86219_startup.blend

Huh. (I actually did attempt it in a reset-to-default copy of 2.92 and it still occurred, but I now realise I was only trying existing files with that workspace inside). Also It seems for my installation, loading a new Compositor preset from the Add Workspace menu (see screenshot) carries this behaviour for me — it's not just the original Compositor that's open by default, the actual presets embedded in the startup file are "corrupted" too. If I just go to any other workspace type and manually switch a zone to a Compositor as Sebastian suggests, those display correctly. I've attached my startup file in case it helps track down the issue. I want to say it was created in 2.81 or 2.82 when I made the leap from 2.7x and has been carried over updates ever since. I do also wonder if a file created fresh in 2.8x and immediately re-opened in 2.92 might exhibit this behaviour? ![image.png](https://archive.blender.org/developer/F9863525/image.png) [T86219_startup.blend](https://archive.blender.org/developer/F9863553/T86219_startup.blend)
Author

Update for @sebastian_k — It seemed to still be occurring randomly in scenes created with my new startup file, but I've found the culprit.

Auto-Offset in the View menu.

I have it disabled by default in my old startup file and I forgot to do that with the new one. The colour profile is dropped instantly as the checkbox is changed and comes back if re-enabled. In my in my original startup file, Auto-Offset was always disabled in the default Compositor. I've also confirmed the behaviour it in the production scenes I was working on when I originally logged the bug, as well as some previously completed shots I have not opened with 2.92 until now.

Update for @sebastian_k — It seemed to still be occurring randomly in scenes created with my new startup file, but I've found the culprit. **Auto-Offset in the View menu.** I have it disabled by default in my old startup file and I forgot to do that with the new one. The colour profile is dropped instantly as the checkbox is changed and comes back if re-enabled. In my in my original startup file, Auto-Offset was always disabled in the default Compositor. I've also confirmed the behaviour it in the production scenes I was working on when I originally logged the bug, as well as some previously completed shots I have not opened with 2.92 until now.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-03-17 16:33:10 +01:00
Member

Nice find, can confirm, will check.

Nice find, can confirm, will check.

This issue was referenced by aeff59073b

This issue was referenced by aeff59073b23d50a39eb0a614d3907ac0d04994a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86219
No description provided.